# pyBattleNet

./: .gitignore  README.md  instructions.md  pyproject.toml
.github/workflows/: normal_test.yml  ontag.yml  pythonpublish.yml
src/pybattlenet/: __init__.py  pybattlenet.py
tests/: __init__.py  conftest.py  test_base.py  tests_pets.py
